[package]
name = "online_llm"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
openai-api-rs = "4.0.9"
serde_json = "1.0"

[dev-dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
async-std = { version = "1.9", features = ["attributes"] }
tokio-test = "0.4.0"
